added kafka and rabbitmq